<resources>
    <string name="app_name">Logistic</string>
    <string name="title_activity_driver_maps">Map</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation_driver">Map</string>
    <string name="title_activity_navigation_driver1">NavigationDriver1Activity</string>
    <string name="lodo">LOdo</string>
    <string name="textview">QUALITY IS NOT AN ACT, IT\'S A HABIT</string>
    <string name="welcome_towards_a_new_dawn">Welcome towards a new dawn</string>
    <string name="head1">Select a payment method</string>
    <string name="cod">COD</string>
    <string name="prepaid">PREPAID</string>
    <string name="congo">CONGRATULATION</string>
    <string name="psfl">Payment Successful</string>
    <string name="note">NOTE : Under Devlopment</string>
    <string name="todo">TODO</string>
</resources>
