<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GatewayActivity">

    <TextView
        android:id="@+id/congo"
        android:layout_width="387dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="506dp"
        android:fontFamily="@font/e"
        android:gravity="center_horizontal"
        android:text="@string/congo"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="#1BAF8C"/>

    <TextView
        android:id="@+id/psfl"
        android:layout_width="397dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="247dp"
        android:fontFamily="@font/f"
        android:gravity="center_horizontal"
        android:text="@string/psfl"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="9dp"
        android:gravity="center_horizontal"
        android:text="@string/note"
        android:textColor="#1A656F"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="201dp"
        android:layout_height="130dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="376dp"
        app:srcCompat="@drawable/emo"
        android:contentDescription="@string/todo" />


</RelativeLayout>