<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentActivity"
    android:orientation="vertical"
    android:background="#FFF"
    >

    <TextView
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="433dp"
        android:fontFamily="@font/f"
        android:gravity="center_horizontal"
        android:padding="15sp"
        android:text="@string/head1"
        android:textColor="#336D65"
        android:textSize="45sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btcod"
        android:layout_width="173dp"
        android:layout_height="66dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="217dp"
        android:layout_marginBottom="173dp"
        android:background="@drawable/rounded_button"
        android:gravity="center"
        android:text="@string/cod"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btprepaid"
        android:layout_width="173dp"
        android:layout_height="66dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="173dp"
        android:background="@drawable/rounded_button"
        android:gravity="center"
        android:text="@string/prepaid"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="40sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="155dp"
        android:layout_height="136dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="228dp"
        android:layout_marginBottom="249dp"
        app:srcCompat="@drawable/cod" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="164dp"
        android:layout_height="112dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="252dp"
        app:srcCompat="@drawable/prepaid" />
</RelativeLayout>